# hydrotools

./: .buildinfo  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  conftest.py  evaluation_tools._restclient.html  evaluation_tools.events.event_detection.decomposition.html  evaluation_tools.events.event_detection.html  evaluation_tools.gcp_client.gcp.html  evaluation_tools.gcp_client.html  evaluation_tools.gcp_client.utils.html  evaluation_tools.metrics.html  evaluation_tools.metrics.metrics.html  evaluation_tools.nwis_client.html  genindex.html  gitflow.md  hydrotools._restclient._iterable_nonstring.html  hydrotools._restclient._restclient.html  hydrotools._restclient._restclient_sigs.html  hydrotools._restclient.async_client.html  hydrotools._restclient.async_helpers.html  hydrotools._restclient.html  hydrotools._restclient.urllib.html  hydrotools._restclient.urllib_types.html  hydrotools._restclient.utilities.html  hydrotools.caches.hdf.html  hydrotools.caches.html  hydrotools.events.event_detection.decomposition.html  hydrotools.events.event_detection.html  hydrotools.gcp_client.gcp.html  hydrotools.gcp_client.html  hydrotools.gcp_client.utils.html  hydrotools.metrics.html  hydrotools.metrics.metrics.html  hydrotools.nwis_client.html  (+24 more)
python/_restclient/: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
python/_restclient/evaluation_tools._restclient.egg-info/: PKG-INFO  SOURCES.txt  namespace_packages.txt
python/_restclient/hydrotools._restclient.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/_restclient/hydrotools/_restclient/: __init__.py  _iterable_nonstring.py  _restclient.py  _restclient_sigs.py  async_client.py  async_helpers.py  urllib.py  urllib_types.py  utilities.py
python/_restclient/src/hydrotools._restclient.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/_restclient/tests/: test_client.py  test_iterable_nonstring.py  test_restclient.py  test_urllib.py  test_utilities.py
python/caches/: CONTRIBUTING.md  README.md  TERMS.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
python/caches/hydrotools.caches.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/caches/hydrotools/caches/: hdf.py
python/caches/src/hydrotools.caches.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/caches/tests/: test_hdf_cache.py
python/events/: README.md  main.py  pyproject.toml  setup.cfg  setup.py
python/events/evaluation_tools.events.egg-info/: PKG-INFO  SOURCES.txt
python/events/hydrotools.events.egg-info/: PKG-INFO  SOURCES.txt
python/events/src/hydrotools.events.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/events/tests/: test_baseflow.py  test_decomposition.py  test_interception.py
python/gcp_client/: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
python/gcp_client/evaluation_tools/: utils.py
python/gcp_client/evaluation_tools.gcp_client.egg-info/: PKG-INFO  SOURCES.txt
python/gcp_client/evaluation_tools/gcp_client/: __init__.py  gcp.py  utils.py
python/gcp_client/hydrotools.gcp_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/gcp_client/hydrotools/gcp_client/: gcp.py  utils.py
python/gcp_client/src/hydrotools.gcp_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/gcp_client/tests/: test_gcp.py  test_utils.py
python/metrics/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
python/metrics/evaluation_tools.metrics.egg-info/: PKG-INFO  SOURCES.txt
python/metrics/evaluation_tools/metrics/: metrics.py
python/metrics/hydrotools.metrics.egg-info/: PKG-INFO  SOURCES.txt  namespace_packages.txt
python/metrics/hydrotools/metrics/: metrics.py
python/metrics/src/hydrotools.metrics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/metrics/tests/: test_contingency_table.py  test_decomposition.py  test_events.py  test_flow_duration_curve.py  test_metrics.py  test_validation.py
python/nwis_client/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
python/nwis_client/evaluation_tools.nwis_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/nwis_client/evaluation_tools/nwis_client/: constants.py  iv.py
python/nwis_client/hydrotools.nwis_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/nwis_client/hydrotools/nwis_client/: __init__.py  iv.py
python/nwis_client/src/hydrotools.nwis_client.egg-info/: PKG-INFO  (+3 more)
python/nwis_client/tests/: flood_stage_response.json  nwis_test_data.json  peak_response.tsv  rating_curve_response.tsv  site_response.tsv  stat_response.tsv  test_GenericClients.py  test__utilities.py  test_client_cli.py  test_nwis.py
python/nwm_client/: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  setup.cfg
python/nwm_client/tests/: test_FileDownloader.py  test_NWMClient.py  test_NWMFileCatalog.py  test_NWMFileProcessor.py  test_ParquetStore.py  test_UnitHandler.py  test_gcp.py  test_http.py  test_units.py  test_utils.py
python/nwm_client/workbench/: main.py
python/nwm_client_new/: MANIFEST.in  README.md  a_file.txt  dummy_file.txt  pyproject.toml  pytest.ini  setup.cfg
python/nwm_client_new/tests/: test_FileDownloader.py  test_NWMClient.py  test_NWMFileCatalog.py  test_NWMFileProcessor.py  test_ParquetCache.py  test_ParquetStore.py  test_UnitHandler.py
python/svi_client/: README.md  pyproject.toml  setup.cfg
python/svi_client/tests/: test_integration.py  test_svi_utilities.py
python/waterdata_client/: README.md  pyproject.toml  pytest.ini
python/waterdata_client/scripts/: build_clients.py  build_constants.py  build_request_models.py  schema_extract.py  test_build_clients.py  test_build_constants.py  test_schema_extract.py
python/waterdata_client/templates/: clients.py.j2  clients_init.py.j2  constants.py.j2  request_models.py.j2
python/waterdata_client/tests/: test__base_client.py  test_async_web_client.py  test_base_client.py  test_client_config.py  test_clients.py  test_constants.py  test_generic_client.py  test_schema.py  test_transformers.py  test_url_builder.py
(+243 files in other folders)
