[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrotools"
authors = [
    { name = "Jason A. Regina", email = "jason.regina@noaa.gov" },
    { name = "Austin Raney", email = "austin.raney@noaa.gov" },
]
description = "Suite of tools for retrieving USGS NWIS observations and evaluating National Water Model (NWM) data."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Operating System :: OS Independent",
]
dependencies = [
    "hydrotools.nwis_client==4.0.0",
    "hydrotools.nwm_client==9.0.0",
    "hydrotools.events==2.0.0",
    "hydrotools.metrics==2.0.0",
    "hydrotools.svi_client==1.0.0"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "hydrotools._version.__version__" }

[project.optional-dependencies]
develop = ["pytest"]

[project.urls]
Homepage = "https://github.com/NOAA-OWP/hydrotools"
Documentation = "https://noaa-owp.github.io/hydrotools"
Repository = "https://github.com/NOAA-OWP/hydrotools"
"Bug Tracker" = "https://github.com/NOAA-OWP/hydrotools/issues"
