[metadata]
name = hydrotools
version = 2.1.2
author = Jason A. Regina and Austin Raney
author_email = jason.regina@noaa.gov
description = Suite of tools for retrieving USGS NWIS observations and evaluating National Water Model (NWM) data.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = USDOC
license_files =
    LICENSE
url = https://github.com/NOAA-OWP/hydrotools
project_urls =
    Documentation = https://noaa-owp.github.io/hydrotools/
    Source = https://github.com/NOAA-OWP/hydrotools/
    Tracker = https://github.com/NOAA-OWP/hydrotools/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    hydrotools.nwis_client>=3.0.3
    hydrotools.nwm_client>=5.0.1
    hydrotools.events>=1.1.3
    hydrotools.metrics>=1.0.2
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
    