[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrotools._restclient"
authors = [{ name = "Austin Raney", email = "aaraney@protonmail.com" }]
description = "General REST api client with built in request caching and retries."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
    "aiohttp_client_cache[sqlite]>=0.9.0",
    "python-forge",
    "aiosqlite",
    "pandas",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "hydrotools._restclient._version.__version__" }

[project.optional-dependencies]
develop = ["pytest", "pytest-aiohttp"]

[project.urls]
Homepage = "https://github.com/NOAA-OWP/hydrotools"
Documentation = "https://noaa-owp.github.io/hydrotools/hydrotools._restclient.html"
Repository = "https://github.com/NOAA-OWP/hydrotools/tree/main/python/_restclient"
"Bug Tracker" = "https://github.com/NOAA-OWP/hydrotools/issues"
