[metadata]
name = hydrotools._restclient
version = 3.0.2
author = Austin Raney
author_email = aaraney@protonmail.com
description = General REST api client with built in request caching and retries.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = USDOC
license_files =
    LICENSE
url = https://github.com/NOAA-OWP/hydrotools
project_urls =
    Documentation = https://noaa-owp.github.io/hydrotools/hydrotools._restclient.html
    Source = https://github.com/NOAA-OWP/hydrotools/tree/main/python/_restclient
    Tracker = https://github.com/NOAA-OWP/hydrotools/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    aiohttp
    aiohttp_client_cache
    python-forge
    aiosqlite
    pandas
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
    pytest-aiohttp
    