[metadata]
name = hydrotools.gcp_client
version = 4.1.2
author = Jason A. Regina
author_email = jason.regina@noaa.gov
description = Retrieve National Water Model data from Google Cloud Platform.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = USDOC
license_files =
    LICENSE
url = https://github.com/NOAA-OWP/hydrotools
project_urls =
    Documentation = https://noaa-owp.github.io/hydrotools/hydrotools.gcp_client.html
    Source = https://github.com/NOAA-OWP/hydrotools/tree/main/python/gcp_client
    Tracker = https://github.com/NOAA-OWP/hydrotools/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    numpy>=1.20.0
    pandas
    xarray
    h5netcdf
    hydrotools.caches>=0.1.2
    google-cloud-storage
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
    