[metadata]
name = hydrotools.nwis_client
version = 3.0.3
author = Austin Raney
author_email = aaraney@protonmail.com
description = A convenient interface to the USGS NWIS Instantaneous Values (IV) REST Service API.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = USDOC
license_files =
    LICENSE
url = https://github.com/NOAA-OWP/hydrotools
project_urls =
    Documentation = https://noaa-owp.github.io/hydrotools/hydrotools.nwis_client.html
    Source = https://github.com/NOAA-OWP/hydrotools/tree/main/python/nwis_client
    Tracker = https://github.com/NOAA-OWP/hydrotools/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    pandas
    numpy
    hydrotools._restclient>=3.0.0
    aiohttp
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
    pytest-aiohttp
    