[metadata]
name = hydrotools.nwm_client_new
version = attr: hydrotools.nwm_client_new._version.__version__
author = Jason A. Regina
author_email = jason.regina@noaa.gov
description = Retrieve National Water Model data from various sources.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = USDOC
license_files =
    LICENSE
url = https://github.com/NOAA-OWP/hydrotools
project_urls =
    Documentation = https://noaa-owp.github.io/hydrotools/hydrotools.nwm_client.html
    Source = https://github.com/NOAA-OWP/hydrotools/tree/main/python/nwm_client
    Tracker = https://github.com/NOAA-OWP/hydrotools/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    numpy>=1.20.0
    pandas
    xarray
    beautifulsoup4
    google-cloud-storage
    dask
    pyarrow
    aiohttp
    aiofiles
    netcdf4
    tables
    pint
    azure-storage-blob
    planetary-computer
    adlfs
    hydrotools._restclient
    dask[dataframe]
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
