[metadata]
name = hydrotools.svi_client
version = attr: hydrotools.svi_client._version.__version__
author = Austin Raney
author_email = aaraney@protonmail.com
description = Retrieve Social Vulnerability Index data from The Center for Disease Control / The Agency for Toxic Substances and Disease Registry.
long_description = file: README.md
long_description_content_type = text/markdown
charset = UTF-8
license = USDOC
license_files =
    LICENSE
url = https://github.com/NOAA-OWP/hydrotools
project_urls =
    Documentation = https://noaa-owp.github.io/hydrotools/hydrotools.svi_client.html
    Source = https://github.com/NOAA-OWP/hydrotools/tree/main/python/svi_client
    Tracker = https://github.com/NOAA-OWP/hydrotools/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Sociology
    Intended Audience :: Science/Research
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    hydrotools._restclient
    numpy >=1.20.0
    pandas
    geopandas
    pydantic
    typing_extensions
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
